// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gutter 1`] = `
<Split
  hasGutter={true}
>
  <div
    className="pf-l-split pf-m-gutter"
  >
    <SplitItem>
      <div
        className="pf-l-split__item"
      >
        Basic Content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`isFilled 1`] = `
<Split>
  <div
    className="pf-l-split"
  >
    <SplitItem
      isFilled={true}
    >
      <div
        className="pf-l-split__item pf-m-fill"
      >
        Main content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`isFilled defaults to false 1`] = `
<Split>
  <div
    className="pf-l-split"
  >
    <SplitItem>
      <div
        className="pf-l-split__item"
      >
        Basic content
      </div>
    </SplitItem>
  </div>
</Split>
`;
